# coii

./: .env.template  .gitignore  LICENSE  README.md  install.sh  onboard
backend/: pyproject.toml
backend/app/: cli.py  config.py  config_cli.py  main.py  ops.py  poller.py  result.py  scheduler.py  setup_wizard.py  util.py
backend/app/activities/: handle_event.py
backend/app/agents/: loader.py
backend/app/api/: admin.py  routes.py
backend/app/default/: config.json
backend/app/default/agents/coder/: AGENTS.md  IDENTITY.md  LOOP.md  SOUL.md  TOOLS.md  USER.md  workspace.json
backend/app/default/workflows/: default_coder_linear_workflow.yaml
backend/app/runtimes/: claude_code.py  llm.py
backend/app/runtimes/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
backend/app/trackers/: base.py  linear.py  types.py
backend/app/triggers/: loader.py  matcher.py  types.py
backend/scripts/: e2e_all.sh  e2e_demo.py  e2e_dispatch.py  e2e_install.sh  e2e_polling.py  onboard.py
backend/tests/: conftest.py  test_agent_loader.py  test_config.py  test_config_cli.py  test_history_rendering.py  test_issue_update_filter.py  test_linear_adapter.py  test_matcher.py  test_onboard.py  test_poller.py  test_providers.py  test_runtime_dispatch.py  test_status_directive.py
docs/: conversation_state.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/pages/: CreateExperimentPage.tsx  ExperimentDetailPage.tsx  ExperimentsPage.tsx  PricingPage.tsx
sdk/: pyproject.toml
sdk/coii/: __init__.py  client.py  context.py
server/: pyproject.toml
server/coii_server/: __init__.py  app.py  cli.py  config.py
server/coii_server/activities/: __init__.py  analysis.py  experiments.py  pricing.py  sdk.py
server/coii_server/api/: router.py
server/coii_server/api/v1/: experiments.py  pricing.py  registry.py  sdk.py
server/coii_server/db/: database.py  seed.py
server/coii_server/models/: __init__.py  orm.py
server/coii_server/utils/: __init__.py  ids.py  result.py
tests/: conftest.py  e2e_live_test.py  requirements-test.txt
tests/e2e/: test_full_flow.py
